--- a/node_file/web/industry_function.html
+++ b/node_file/web/industry_function.html
@@ -1,13 +1,6 @@
+
 <!DOCTYPE html>
-<html>
-
-<head>
-
-</head>
-
-</html>
-<!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
     <meta charset="utf-8" />
@@ -62,11 +55,6 @@
 
                     <ul class="list-inline float-right mb-0">
                         <!-- Search -->
-                        <!-- <li class="list-inline-item dropdown notification-list">
-                            <a class="nav-link waves-effect toggle-search" href="#" data-target="#search-wrap">
-                                <i class="mdi mdi-magnify noti-icon"></i>
-                            </a>
-                        </li> -->
                         <!-- Fullscreen -->
                         <li class="list-inline-item dropdown notification-list hide-phone">
                             <a class="nav-link waves-effect" href="#" id="btn-fullscreen">
@@ -79,62 +67,9 @@
                                 role="button" aria-haspopup="false" aria-expanded="false">
                                 korea <img src="assets/images/flags/korea_flag.jpg" class="ml-2" height="16" alt="" />
                             </a>
-                            <!-- <div class="dropdown-menu dropdown-menu-right language-switch">
-                                <a class="dropdown-item" href="#"><img src="assets/images/flags/germany_flag.jpg" alt=""
-                                        height="16" /><span> German </span></a>
-                                <a class="dropdown-item" href="#"><img src="assets/images/flags/italy_flag.jpg" alt=""
-                                        height="16" /><span> Italian </span></a>
-                                <a class="dropdown-item" href="#"><img src="assets/images/flags/french_flag.jpg" alt=""
-                                        height="16" /><span> French </span></a>
-                                <a class="dropdown-item" href="#"><img src="assets/images/flags/spain_flag.jpg" alt=""
-                                        height="16" /><span> Spanish </span></a>
-                                <a class="dropdown-item" href="#"><img src="assets/images/flags/korea_flag.jpg" alt=""
-                                        height="16" /><span> korea </span></a>
-                                <a class="dropdown-item" href="#"><img src="assets/images/flags/russia_flag.jpg" alt=""
-                                        height="16" /><span> Russian </span></a>
-                            </div> -->
+
                         </li>
-                        <!-- notification-->
-                        <!-- <li class="list-inline-item dropdown notification-list">
-                            <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown" href="#"
-                                role="button" aria-haspopup="false" aria-expanded="false">
-                                <i class="ion-ios7-bell noti-icon"></i>
-                                <span class="badge badge-danger noti-icon-badge">3</span>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg"> -->
-                                <!-- item-->
-                                <!-- <div class="dropdown-item noti-title">
-                                    <h5>Notification (3)</h5>
-                                </div> -->
 
-                                <!-- item-->
-                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item active">
-                                    <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>
-                                    <p class="notify-details"><b>Your order is placed</b><small class="text-muted">Dummy
-                                            text of the printing and typesetting industry.</small></p>
-                                </a> -->
-
-                                <!-- item-->
-                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>
-                                    <p class="notify-details"><b>New Message received</b><small class="text-muted">You
-                                            have 87 unread messages</small></p>
-                                </a> -->
-
-                                <!-- item-->
-                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon bg-info"><i class="mdi mdi-martini"></i></div>
-                                    <p class="notify-details"><b>Your item is shipped</b><small class="text-muted">It is
-                                            a long established fact that a reader will</small></p>
-                                </a> -->
-
-                                <!-- All-->
-                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    View All
-                                </a>
-
-                            </div>
-                        </li> -->
                         <!-- User-->
                         <li class="list-inline-item dropdown notification-list">
                             <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown"
@@ -142,16 +77,11 @@
                                 <i class="mdi ion-android-social-user"></i>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
-                                <!-- <a class="dropdown-item" href="#"><i class="dripicons-user text-muted"></i> Profile</a>
-                                <a class="dropdown-item" href="#"><i class="dripicons-wallet text-muted"></i> My
-                                    Wallet</a>
-                                <a class="dropdown-item" href="#"><span
-                                        class="badge badge-success pull-right m-t-5">5</span><i
-                                        class="dripicons-gear text-muted"></i> Settings</a>
-                                <a class="dropdown-item" href="#"><i class="dripicons-lock text-muted"></i> Lock
-                                    screen</a>
-                                <div class="dropdown-divider"></div> -->
-                                <a class="dropdown-item" href="#"><i class="dripicons-exit text-muted"></i> Logout</a>
+                                <form id=logout method="POST" action="/logout">
+                                    <a id = jkhsend-3 class="dropdown-item" href="#"><i class="dripicons-exit text-muted"></i>
+                                        Logout</a>
+
+                                </form>
                             </div>
                         </li>
                         <li class="menu-item list-inline-item">
@@ -188,12 +118,6 @@
                         <li>
                             <a href="#"><i class="mdi ion-android-social-user"></i><span id="jkhajax-2">자동조작</span></a>
                         </li>
-                        <!-- <li>
-                            <a href="#"><i class="mdi ion-gear-b"></i><span id="jkhajax-3">자동조작</span></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="mdi mdi-cube-outline"></i><span id="jkhajax-4">비고</span></a>
-                        </li> -->
 
                     </ul>
                     <!-- End navigation menu -->
@@ -250,8 +174,8 @@
 
     <!-- App js -->
     <script src="assets/js/app.js"></script>
-    <!-- <script src="assets/js/ajax.js"></script> -->
     <script src="js/pages-ajax-indu.js"></script>
+    <script src="js/pages-main-redirct.js"></script>
 
 </body>
 
