--- a/node_file/web/landing/industry/index.html
+++ b/node_file/web/landing/industry/index.html
@@ -220,6 +220,10 @@
 							<input type="email" name="email" id="email" value="" />
 						</div>
 						<div class="field">
+							<label for="text">Title</label>
+							<input type="text" name="title" id="title" value="" />
+						</div>
+						<div class="field">
 							<label for="message">Message</label>
 							<textarea name="message" id="message" rows="6"></textarea>
 						</div>
@@ -257,6 +261,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="../../js/pages-meagess.js"></script>
 
 </body>
 
