--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -204,12 +204,16 @@
 										<input type="email" name="email" id="email" value="" />
 									</div>
 									<div class="field">
+										<label for="text">Title</label>
+										<input type="text" name="title" id="title" value="" />
+									</div>
+									<div class="field">
 										<label for="message">Message</label>
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div>
 								</div>
 								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+									<li><input type="button" name="submit" id="submit" value="Send Message" /></li>
 								</ul>
 							</form>
 
@@ -225,8 +229,7 @@
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-							<p>&copy; Untitled. Design: <a href="../../office_function.html">HTML5 UP</a>.</p>
+							</ul>							
 						</div>
 					</footer>
 
@@ -240,6 +243,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="../../js/pages-meagess.js"></script>
 
 	</body>
 </html>
