--- a/node_file/web/use/_share/share.html
+++ b/node_file/web/use/_share/share.html
@@ -1,51 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/main.css">
-    <script defer src="../../assets/js/css_main.js"></script>
-    <title>Document</title>
+	<!-- App Icons -->
+	<link rel="shortcut icon" href="../../assets/images/favicon.ico">
+
+	<!-- App css -->
+	<link href="../../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="../../assets/css/icons.css" rel="stylesheet" type="text/css" />
+	<link href=../../assets/css/style.css" rel="stylesheet" type="text/css" />
+
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="../../assets/css/main.css">
+	<script defer src="../../assets/js/css_main.js"></script>
+	<title>Document</title>
 </head>
+
 <body>
-    <!-- 상단바 -->	
+	<!-- 상단바 -->
 	<div class="main share">
 		<!-- header -->
-		<header id="main-header" class="main">    
+		<header id="main-header" class="main">
 			<a href="../../index.html"><img class="logo" src="../../images/logo/logo2.png">
 				<img class="logo-mini" src="../../images/logo/logo_transparent_mini.png"></a>
-			<!-- <div class="location">ss</div> -->
+
 			<ul class="menu-bar">
-				<li class="login">Login</li>
-				<li class="menu-button">Menu</li>
+				<li class="login">
+					<!------폼태그(1/3)---------------->
+
+					<div id="login__main_benner">
+						<a href="../../pages-login.html">Login</a>
+
+					</div>
+
+				</li>
 			</ul>
 		</header>
-		<!-- action bar -->
-		<div class="action-bar">
-			<ul class="content">
-				<li>Main</li>
-				<li>Community</li>
-			</ul>
-			<i class="fas fa-angle-right action-bar-button"></i>     
-		</div>
-		<!-- nav -->
-		<div id="menu-select" class="invisible">            
-			<ul>
-				<li class="menu-item myinfo">
-					<div class="user">
-						<img src="../../images/main/default.png" alt="">
-						<span class="name"></span>
-						<span class="logout">로그아웃</span>
-						<span class="mail"></span>
-					</div>
-					<div class="link">
-						<a href="../_mypage/mypage.html">내 정보</a>
-						<a href="">설정</a>                            
-					</div>
-				</li>
-				<br>
-			</ul>
-		</div>
+
 		<!-- banner -->
 		<div id="banner" class="banner share">
 			<div class="banner-inner">
@@ -53,14 +46,212 @@
 					<span>스마트한 기술 스마트한 우리</span>
 					<span>사물인터넷으로 만들어가는 미래</span>
 					<span class="banner-sub">LS IoT</span>
+					<span class="banner-sub2">소통의 창</span>
 				</div>
-				<ul class="banner-button-box">
-					<li>자유 게시판</li>
-					<li>질문 게시판</li>
-					<li>정보 게시판</li>
-				</ul>
-			</div>   
+
+			</div>
 		</div>
-	</div>
+		<div>
+			<!-- page wrapper start -->
+			<div class="wrapper">
+
+				<div class="row">
+					<div class="col-lg-8">
+						<div class="card m-b-20">
+							<div class="card-body">
+								<h4 class="mt-0 header-title">Frequently Asked Questions</h4>
+								<div class="m-t-30">
+									<div id="accordion">
+										<div class="card">
+											<div class="card-header bg-white border-bottom-0 p-3" id="headingOne">
+												<h5 class="mb-0 mt-0 font-16 font-light">
+													<a href="#" data-toggle="collapse" data-target="#collapseOne"
+														aria-expanded="true" aria-controls="collapseOne"
+														class="text-dark">
+														Q.1 What is Lorem Ipsum?
+													</a>
+												</h5>
+											</div>
+
+											<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+												data-parent="#accordion">
+												<div class="card-body text-muted">
+													Anim pariatur cliche reprehenderit, enim eiusmod high life
+													accusamus terry richardson ad squid. 3 wolf moon officia
+													aute, non cupidatat skateboard dolor brunch. Food truck
+													quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+													sunt aliqua put a bird on it squid single-origin coffee
+													nulla assumenda shoreditch et. Nihil anim keffiyeh
+													helvetica, craft beer labore wes anderson cred nesciunt
+													sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+													Leggings occaecat craft beer farm-to-table, raw denim
+													aesthetic synth nesciunt you probably haven't heard of them
+													accusamus labore sustainable VHS.
+												</div>
+											</div>
+										</div>
+										<div class="card">
+											<div class="card-header bg-white border-bottom-0 p-3" id="headingTwo">
+												<h5 class="mb-0 mt-0 font-16 font-light">
+													<a href="#" class="text-dark collapsed" data-toggle="collapse"
+														data-target="#collapseTwo" aria-expanded="false"
+														aria-controls="collapseTwo">
+														Q.2 Is safe use Lorem Ipsum?
+													</a>
+												</h5>
+											</div>
+											<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+												data-parent="#accordion">
+												<div class="card-body text-muted">
+													Anim pariatur cliche reprehenderit, enim eiusmod high life
+													accusamus terry richardson ad squid. 3 wolf moon officia
+													aute, non cupidatat skateboard dolor brunch. Food truck
+													quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+													sunt aliqua put a bird on it squid single-origin coffee
+													nulla assumenda shoreditch et. Nihil anim keffiyeh
+													helvetica, craft beer labore wes anderson cred nesciunt
+													sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+													Leggings occaecat craft beer farm-to-table, raw denim
+													aesthetic synth nesciunt you probably haven't heard of them
+													accusamus labore sustainable VHS.
+												</div>
+											</div>
+										</div>
+										<div class="card">
+											<div class="card-header bg-white border-bottom-0 p-3" id="headingThree">
+												<h5 class="mb-0 mt-0 font-16 font-light">
+													<a href="#" class="text-dark collapsed" data-toggle="collapse"
+														data-target="#collapseThree" aria-expanded="false"
+														aria-controls="collapseThree">
+														Q.3 Why use Lorem Ipsum?
+													</a>
+												</h5>
+											</div>
+											<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+												data-parent="#accordion">
+												<div class="card-body text-muted">
+													Anim pariatur cliche reprehenderit, enim eiusmod high life
+													accusamus terry richardson ad squid. 3 wolf moon officia
+													aute, non cupidatat skateboard dolor brunch. Food truck
+													quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+													sunt aliqua put a bird on it squid single-origin coffee
+													nulla assumenda shoreditch et. Nihil anim keffiyeh
+													helvetica, craft beer labore wes anderson cred nesciunt
+													sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+													Leggings occaecat craft beer farm-to-table, raw denim
+													aesthetic synth nesciunt you probably haven't heard of them
+													accusamus labore sustainable VHS.
+												</div>
+											</div>
+										</div>
+										<div class="card">
+											<div class="card-header bg-white border-bottom-0 p-3" id="headingFour">
+												<h5 class="mb-0 mt-0 font-16 font-light">
+													<a href="#" class="text-dark collapsed" data-toggle="collapse"
+														data-target="#collapseFour" aria-expanded="false"
+														aria-controls="collapseFour">
+														Q.4 When can be used?
+													</a>
+												</h5>
+											</div>
+											<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+												data-parent="#accordion">
+												<div class="card-body text-muted">
+													Anim pariatur cliche reprehenderit, enim eiusmod high life
+													accusamus terry richardson ad squid. 3 wolf moon officia
+													aute, non cupidatat skateboard dolor brunch. Food truck
+													quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+													sunt aliqua put a bird on it squid single-origin coffee
+													nulla assumenda shoreditch et. Nihil anim keffiyeh
+													helvetica, craft beer labore wes anderson cred nesciunt
+													sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+													Leggings occaecat craft beer farm-to-table, raw denim
+													aesthetic synth nesciunt you probably haven't heard of them
+													accusamus labore sustainable VHS.
+												</div>
+											</div>
+										</div>
+										<div class="card">
+											<div class="card-header bg-white border-bottom-0 p-3" role="tab"
+												id="headingFive">
+												<h5 class="mb-0 mt-0 font-16 font-light">
+													<a href="#" class="text-dark collapsed" data-toggle="collapse"
+														data-target="#collapseFive" aria-expanded="false"
+														aria-controls="collapseFive">
+														Q.5 How many variations exist?
+													</a>
+												</h5>
+											</div>
+											<div id="collapseFive" class="collapse" aria-labelledby="headingFive"
+												data-parent="#accordion">
+												<div class="card-body text-muted">
+													Anim pariatur cliche reprehenderit, enim eiusmod high life
+													accusamus terry richardson ad squid. 3 wolf moon officia
+													aute, non cupidatat skateboard dolor brunch. Food truck
+													quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+													sunt aliqua put a bird on it squid single-origin coffee
+													nulla assumenda shoreditch et. Nihil anim keffiyeh
+													helvetica, craft beer labore wes anderson cred nesciunt
+													sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+													Leggings occaecat craft beer farm-to-table, raw denim
+													aesthetic synth nesciunt you probably haven't heard of them
+													accusamus labore sustainable VHS.
+												</div>
+											</div>
+										</div>
+										<div class="card">
+											<div class="card-header bg-white border-bottom-0 p-3" role="tab"
+												id="headingSix">
+												<h5 class="mb-0 mt-0 font-16 font-light">
+													<a href="#" class="text-dark collapsed" data-toggle="collapse"
+														data-target="#collapseSix" aria-expanded="false"
+														aria-controls="collapseSix">
+														Q.6 License & Copyright
+													</a>
+												</h5>
+											</div>
+
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end container-fluid -->
+
+				</div>
+				<!-- page wrapper end -->
+
+				<footer class="footer">
+					<div class="container-fluid">
+
+						<div class="row">
+							<div class="col-12">
+								2021 © Teamproject <span class="text-muted hide-phone pull-right">졸업 작품</span>
+							</div>
+						</div>
+					</div>
+				</footer>
+
+				<script src="../../assets/js/jquery.min.js"></script>
+				<script src="../../assets/js/bootstrap.bundle.min.js"></script>
+				<script src="../../assets/js/modernizr.min.js"></script>
+				<script src="../../assets/js/waves.js"></script>
+				<script src="../../assets/js/jquery.slimscroll.js"></script>
+				<script src="../../assets/js/jquery.nicescroll.js"></script>
+				<script src="../../assets/js/jquery.scrollTo.min.js"></script>
+				<script
+					src="../../https://maps.google.com/maps/api/js?key=AIzaSyCtSAR45TFgZjOs4nBFFZnII-6mMHLfSYI"></script>
+
+
+				<!-- App js -->
+				<script src="../../assets/js/app.js"></script>
+				<script src="../../js/pages-login-name.js"></script>
+				<script src="../../js/pages-ajax-qna.js"></script>
+			</div>
+		</div>
 </body>
+
 </html>
