--- a/node_file/web/pages-orderhistory.html
+++ b/node_file/web/pages-orderhistory.html
@@ -95,6 +95,7 @@
 <script src="assets/plugins/datatables/dataTables.responsive.min.js"></script>
 <script src="assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
 <script src="js/pages-ajax-orderhistory.js"></script>
+<script src="js/pages-parent.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
