--- a/node_file/web/use/_intro/intro_another.html
+++ b/node_file/web/use/_intro/intro_another.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title> Ls IoT </title>
     <meta charset="utf-8" />
@@ -25,47 +24,21 @@
         <header id="main-header" class="main" style="position:absolute;">
             <a href="../../index.html"><img class="logo" src="../../images/logo/logo_transparent_wide.png">
                 <img class="logo-mini" src="../../images/logo/logo_transparent_mini.png"></a>
-            <!-- <div class="location">ss</div> -->
+
             <ul class="menu-bar">
-                <!-- <li class="login"><a href="../../login.html">Login</a></li>
-					<li class="menu-button">Menu</li> -->
-            </ul>
-        </header>
-        <!-- action bar -->
-        <div class="action-bar" style="position:absolute;">
-            <ul class="content">
-                <li>Main</li>
-                <li>Intro</li>
-            </ul>
-            <i class="fas fa-square action-bar-button"></i>
-        </div>
-        <!-- nav -->
-        <div id="menu-select">
-            <ul>
-                <li class="menu-item myinfo">
-                    <!-- nav-user -->
-                    <div class="user">
-                        <img src="../../images/main/default.png" alt="">
-                        <span class="name">이름</span>
-                        <span class="logout">로그아웃</span>
-                        <span class="mail">이메일</span>
-                    </div>
-                    <!-- nav-link -->
-                    <div class="link">
-                        <a href="../../use/_mypage/mypage.html">내 정보</a>
-                        <a href="">설정</a>
+                <li class="login">
+                    <div id="login__main_benner">
+                        <a href="pages-login.html">Login</a>
                     </div>
                 </li>
-                <br>
             </ul>
-        </div>
+        </header>
     </div>
 
     <!-- intro area -->
     <div class="intro">
         <div class="intro_main">
             <div class="explain">
-                <a href="intro.html" style="color:red;"><div>이전버전 보러가기</div></a>
                 <span>Company</span><br><br>
                 Ls IoT 플랫폼은 더욱 빨리지는 인터넷 시대에 맞춰 Global표준을 준수하여 다른 플랫폼과 호환성을 확보하며 가정, 산업, 사무에 기술을 확대 적용하여 고객들이 원하는 서비스를
                 제공하고 있습니다.
@@ -93,99 +66,93 @@
                 </div>
             </div>
             <!-- intro maker -->
-           
-            </div>
+
         </div>
+        <img src="../../images/main/11.jpg" width="100%" height="100%" >
+        <img src="../../images/main/22.jpg" width="100%" height="100%">
+        <img src="../../images/main/33.jpg" width="100%" height="100%">
+    </div>
     </div>
 
-         <section class="wrapper post bg-img" data-bg="../../../assets/images/team/기훈.jpg">
-            <div class="inner">
-                <article class="box">
-                    <header>
-                        <h2>정기훈</h2>
-                        <p>16학번</p>
-                    </header>
-                    <div class="content">
-                        <p>총괄, 일정관리, 서버, 하드웨어 디자인</p>
-                    </div>
-                    <footer>
-                        <a href="generic.html" class="button alt">Learn More</a>
-                    </footer>
-                </article>
-            </div>
-        </section>
-        <section class="wrapper post bg-img" data-bg="../../../assets/images/team/동훈.jpg">
-            <div class="inner">
-                <article class="box">
-                    <header>
-                        <h2>김동훈</h2>
-                        <p>16학번</p>
-                    </header>
-                    <div class="content">
-                        <p>하드웨어 디자인, 하드웨어 설계</p>
-                    </div>
-                    <footer>
-                        <a href="generic.html" class="button alt">Learn More</a>
-                    </footer>
-                </article>
-            </div>
-        </section>
-        <section class="wrapper post bg-img" data-bg="../../../assets/images/team/봉기.jpg">
-            <div class="inner">
-                <article class="box">
-                    <header>
-                        <h2>신봉기</h2>
-                        <p>16학번</p>
-                    </header>
-                    <div class="content">
-                        <p>디자인 구현, 디자인 기획, api적용</p>
-                    </div>
-                    <footer>
-                        <a href="generic.html" class="button alt">Learn More</a>
-                    </footer>
-                </article>
-            </div>
-        </section>
-        <section class="wrapper post bg-img" data-bg="../../../assets/images/team/종현햄.jpg">
-            <div class="inner">
-                <article class="box">
-                    <header>
-                        <h2>임종현</h2>
-                        <p>15학번</p>
-                    </header>
-                    <div class="content">
-                        <p>총괄, 일정관리, 서버, database</p>
-                    </div>
-                    <footer>
-                        <a href="generic.html" class="button alt">Learn More</a>
-                    </footer>
-                </article>
-            </div>
-        </section>
-        <section class="wrapper post bg-img" data-bg="../../../assets/images/team/재한햄.jpg">
-            <div class="inner">
-                <article class="box">
-                    <header>
-                        <h2>조재한</h2>
-                        <p>15학번</p>
-                    </header>
-                    <div class="content">
-                        <p>회의록 작성, 하드웨어 디자인, 홈페이지 디자인</p>
-                    </div>
-                    <footer>
-                        <a href="generic.html" class="button alt">Learn More</a>
-                    </footer>
-                </article>
-            </div>
-        </section>
-
- 
-
-
-
-
-
-
+    <section class="wrapper post bg-img" data-bg="../../../assets/images/team/기훈.jpg">
+        <div class="inner">
+            <article class="box">
+                <header>
+                    <h2>정기훈</h2>
+                    <p>16학번</p>
+                </header>
+                <div class="content">
+                    <p>총괄, 일정관리, 서버, 하드웨어 디자인</p>
+                </div>
+                <footer>
+                    <a href="generic.html" class="button alt">Learn More</a>
+                </footer>
+            </article>
+        </div>
+    </section>
+    <section class="wrapper post bg-img" data-bg="../../../assets/images/team/동훈.jpg">
+        <div class="inner">
+            <article class="box">
+                <header>
+                    <h2>김동훈</h2>
+                    <p>16학번</p>
+                </header>
+                <div class="content">
+                    <p>하드웨어 디자인, 아두이노 코딩,하드웨어 설계</p>
+                </div>
+                <footer>
+                    <a href="generic.html" class="button alt">Learn More</a>
+                </footer>
+            </article>
+        </div>
+    </section>
+    <section class="wrapper post bg-img" data-bg="../../../assets/images/team/봉기.jpg">
+        <div class="inner">
+            <article class="box">
+                <header>
+                    <h2>신봉기</h2>
+                    <p>16학번</p>
+                </header>
+                <div class="content">
+                    <p>디자인 구현, 영상처리 구현, api적용</p>
+                </div>
+                <footer>
+                    <a href="generic.html" class="button alt">Learn More</a>
+                </footer>
+            </article>
+        </div>
+    </section>
+    <section class="wrapper post bg-img" data-bg="../../../assets/images/team/종현햄.jpg">
+        <div class="inner">
+            <article class="box">
+                <header>
+                    <h2>임종현</h2>
+                    <p>15학번</p>
+                </header>
+                <div class="content">
+                    <p>총괄, 일정관리, 서버, database</p>
+                </div>
+                <footer>
+                    <a href="generic.html" class="button alt">Learn More</a>
+                </footer>
+            </article>
+        </div>
+    </section>
+    <section class="wrapper post bg-img" data-bg="../../../assets/images/team/재한햄.jpg">
+        <div class="inner">
+            <article class="box">
+                <header>
+                    <h2>조재한</h2>
+                    <p>15학번</p>
+                </header>
+                <div class="content">
+                    <p>회의록 작성, 하드웨어 디자인, 홈페이지 디자인</p>
+                </div>
+                <footer>
+                    <a href="generic.html" class="button alt">Learn More</a>
+                </footer>
+            </article>
+        </div>
+    </section>
 </body>
-
 </html>
