--- a/node_file/web/error/404.html
+++ b/node_file/web/error/404.html
@@ -7,9 +7,9 @@
 <body>
 	<h3>ERROR - 페이지를 찾을 수 없습니다.</h3>
 	<hr/>
-	<p>/views/error/404.html 파일의 에러 페이지를 표시한 것입니다.
+	<p>/web/error/404.html 파일의 에러 페이지를 표시한 것입니다.
 	</p>
- 	<h3><a href ='http://203.241.228.131:3000/views/index.html'>메인페이지로 가기</a></h3>
+ 	<h3><a href ='http://115.138.105.47:3000/web/index.html'>메인페이지로 가기</a></h3>
 
 </body>
 </html>
