--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -21,10 +21,9 @@
 		
 		<header id="header" class="alt">
 			<a href = "../../index.html">
-			<span class="logo"><img src="images/logo.svg" alt="" /></span>
+			<span class="logo"><img src="images/1logo.png" height="200" alt="" /></span>
 		</a>
-			<h1>Ls IoT</h1>
-			<p>Just another free, Control multiple objects with one system<br /></p>
+			<p><br /><br />Just another free, Control multiple objects with one system<br></p>
 				<a href="#zero" class="button big wide smooth-scroll" id="buttons1">   Next    </a>
 		</header>
 		
