--- a/node_file/web/pages-productbill.html
+++ b/node_file/web/pages-productbill.html
@@ -28,9 +28,6 @@
 </head>
 
 <body>
-    <form name="myform">
-        자식창 Sender : <input type="text" name="sender" id='sender' size="10"><br>
-    </form>
 
     <!-- Loader -->
     <div id="preloader">
@@ -46,7 +43,7 @@
 
                 <div class="logo">
                     <!-- <a href="index.html" class="logo"> -->
-                        <img src="assets/images/logo2.png" alt="" height="70" width="300">
+                        <img src="assets/images/1logo.png" alt="logo" height="70" width="300">
                     </a>
 
                 </div>
@@ -88,7 +85,7 @@
                                 <div id="div_number" class="invoice-title">
                                     <h4 class="pull-right font-16"><strong>Order # 12345</strong></h4>
                                     <h3 class="m-t-0">
-                                        <img src="assets/images/logo.png" alt="logo" height="26"/>
+                                        <!-- <img src="assets/images/1logo.png" alt="logo" height="26"/> -->
                                     </h3>
                                 </div>
                                 <hr>
