--- a/node_file/web/index.html
+++ b/node_file/web/index.html
@@ -26,7 +26,8 @@
     <div class="main real">
         <!-- header -->
         <header id="main-header" class="main">
-            <img id="zero" class="logo scroll" src="images/logo/logo2.png">
+            <!-- <img id="zero" class="logo scroll" src="images/logo/logo2.png"> -->
+            <img id="zero" class="logo scroll" src="images/logo/1logo.png">
             <img id="zero" class="logo-mini scroll" src="images/logo/logo_transparent_mini.png">
             <!--  -->
             <ul class="menu-bar">
