--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -35,7 +35,7 @@
 
                 <div class="logo">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo2.png" alt="" height="70" width="300">
+                        <img src="assets/images/1logo.png" alt="" height="70" width="300">
                     </a>
 
                 </div>
@@ -120,9 +120,9 @@
                         <li>
                             <a href="#" id="jkhajax-3"><i class="mdi ion-ios7-cart"></i><span>제품발주</span></a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#" id="jkhajax-4"><i class="mdi ion-android-note"></i><span>제품구매확인</span></a>
-                        </li>
+                        </li> -->
                         <li>
                             <a href="#"><i class="mdi mdi-airplane"></i><span id="jkhajax-5">주문기록</span></a>
                         </li>
