--- a/node_file/web/pages-login.html
+++ b/node_file/web/pages-login.html
@@ -34,7 +34,7 @@
                 <div class="card-body">
 
                     <h3 class="text-center m-0">
-                        <a href="index.html" class="logo logo-admin"><img src="assets/images/logo.png" height="120" alt="logo"></a>
+                        <a href="index.html" class="logo logo-admin"><img src="assets/images/1logo.png" height="10%" alt="logo"></a>
                     </h3>
 
                     <div class="p-3">
