--- a/node_file/web/pages-productlist.html
+++ b/node_file/web/pages-productlist.html
@@ -8,7 +8,7 @@
 			<div class="card-body">
 				<table id="datatable" class="table table-striped dt-responsive nowrap table-vertical" width="100%"
 					cellspacing="0">
-					<h3 class="page-title">Ecommerce product-list</h3><br>
+					<h3 class="page-title">제품 목록</h3><br>
 					<thead>
 						<tr>
 							<!-- <th>Image</th> -->
