--- a/node_file/web/use/_home/home_explain.html
+++ b/node_file/web/use/_home/home_explain.html
@@ -13,7 +13,7 @@
 		<div class="main">
 			<!-- header -->
 			<header id="main-header"class="main">    
-				<a href="../../index.html"><img class="logo" src="../../images/logo/logo_transparent_wide.png">
+				<a href="../../index.html"><img class="logo" src="../../images/logo/1logo.png">
 					<img class="logo-mini" src="../../images/logo/logo_transparent_mini.png"></a>
 				<!-- <div class="location">ss</div> -->
 				<ul class="menu-bar">
@@ -22,13 +22,13 @@
 				</ul>
 			</header>
 			<!-- action bar -->
-			<div class="action-bar">
+			<!-- <div class="action-bar">
 				<ul class="content">					
 					<li>Home</li>
 					<li>Explain</li>
 				</ul>
 				<i class="fas fa-square action-bar-button"></i>     
-			</div>
+			</div> -->
 			<!-- nav -->
 			<div id="menu-select">            
 				<ul>
