--- a/node_file/web/use/_share/share.html
+++ b/node_file/web/use/_share/share.html
@@ -23,7 +23,7 @@
 	<div class="main share">
 		<!-- header -->
 		<header id="main-header" class="main">
-			<a href="../../index.html"><img class="logo" src="../../images/logo/logo2.png">
+			<a href="../../index.html"><img class="logo" src="../../images/logo/1logo.png">
 				<img class="logo-mini" src="../../images/logo/logo_transparent_mini.png"></a>
 
 			<ul class="menu-bar">
@@ -59,7 +59,7 @@
 					<div class="col-lg-8">
 						<div class="card m-b-20">
 							<div class="card-body">
-								<h4 class="mt-0 header-title">Frequently Asked Questions</h4>
+								<h4 class="mt-0 header-title">Frequently Asked Questions <br></h4>
 								<div class="m-t-30">
 									<div id="accordion">
 										<div class="card">
