--- a/node_file/web/pages-productout.html
+++ b/node_file/web/pages-productout.html
@@ -27,7 +27,7 @@
                     <div class="row">
                         <div class="col-sm-6">
 
-                            <button type="submit" id="order" class="btn btn-success waves-effect waves-light">발주
+                            <button type="submit" id="order" class="btn btn-success waves-effect waves-light">출고
                                 신청</button>
                             <button type="submit" id="cancel" class="btn btn-secondary waves-effect">취소</button>
                         </div>
@@ -44,7 +44,7 @@
 
     <script src="assets/plugins/select2/js/select2.min.js" type="text/javascript"></script>
     <script src="js/pages-ajax-productbuylist.js"></script>
-    <script src="js/pages-productbuy-order.js"></script>
+    <script src="js/pages-productbuy-out-order.js"></script>
     <!-- <script type="text/javascript">
 $(".select2").select2();
 </script> -->
