--- a/node_file/web/pages-statistics.html
+++ b/node_file/web/pages-statistics.html
@@ -69,7 +69,7 @@
         </div>
 
     </div>
-
+<script src="./js/pages-statistics.js"></script>
 <script src="./js/morris.min.js"></script>
 <script src="./js/raphael-min.js"></script>
 <script src="./js/morris.init.js"></script>
