--- a/node_file/web/use/_intro/intro_another.html
+++ b/node_file/web/use/_intro/intro_another.html
@@ -22,13 +22,13 @@
     <div class="main">
         <!-- header -->
         <header id="main-header" class="main" style="position:absolute;">
-            <a href="../../index.html"><img class="logo" src="../../images/logo/logo_transparent_wide.png">
+            <a href="../../index.html"><img class="logo" src="../../images/logo/1logo.png">
                 <img class="logo-mini" src="../../images/logo/logo_transparent_mini.png"></a>
 
             <ul class="menu-bar">
                 <li class="login">
                     <div id="login__main_benner">
-                        <a href="pages-login.html">Login</a>
+                        <a color ="black"zzzzhref="pages-login.html">Login</a>
                     </div>
                 </li>
             </ul>
@@ -140,4 +140,5 @@
         </div>
     </section>
 </body>
+<script src="../../js/pages-login-name.js"></script>
 </html>
