--- a/node_file/web/use/_share/share.html
+++ b/node_file/web/use/_share/share.html
@@ -8,14 +8,14 @@
 	<!-- App css -->
 	<link href="../../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/css/icons.css" rel="stylesheet" type="text/css" />
-	<link href=../../assets/css/style.css" rel="stylesheet" type="text/css" />
+	<link href="../../assets/css/style.css" rel="stylesheet" type="text/css" />
 
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/main.css">
 	<script defer src="../../assets/js/css_main.js"></script>
-	<title>Document</title>
+	<title>Ls IoT</title>
 </head>
 
 <body>
