--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -223,12 +223,13 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>							
+								<li><a href="https://twitter.com" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
+								</li>
+								<li><a href="https://www.instagram.com/" class="icon brands style2 fa-instagram"><span
+											class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/jung-ki-hun/project_J" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>			
 						</div>
 					</footer>
 
