--- a/node_file/web/pages-productout.html
+++ b/node_file/web/pages-productout.html
@@ -17,6 +17,10 @@
                                 </select>
                             </div>
                             <div class="form-group">
+                                <label for="productprice">qr_code :</label>
+                                <label for="qr_code1" id=qr_code2>A_1</label>
+                            </div>
+                            <div class="form-group">
                                 <label for="manufacturername">제품 수량</label>
                                 <input id="manufacturername" name="manufacturername" type="text" class="form-control">
                             </div>
